# artikel_trainer

./: ReadMe.md  main.py  pyproject.toml
