[tool.poetry]
name = "artikel-trainer"
version = "0.1.0"
description = ""
authors = ["Matthew The <matthew.the@tum.de>"]
readme = "README.md"
packages = [{include = "artikel_trainer"}]

[tool.poetry.dependencies]
python = "^3.8"
feedparser = "^6.0.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
