[tool.poetry]
name = "artikel-trainer"
version = "0.1.0"
description = ""
authors = ["Matthew The <matthew.the@tum.de>"]
readme = "README.md"
packages = [{include = "artikel_trainer"}]

[tool.poetry.dependencies]
python = ">=3.8,<3.9.7 || >3.9.7,<4.0"
feedparser = "^6.0.10"
streamlit = "^1.27.2"
beautifulsoup4 = "^4.12.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
